Bugfix in template

--- a/view/frontend/templates/html/notification_bar.phtml
+++ b/view/frontend/templates/html/notification_bar.phtml
@@ -1,6 +1,6 @@
 <?php
 /** @var  $notificationbarViewModel Lotsofpixels\NotificationBar\ViewModel\ */
-/** @var  $block  Magento\Framework\View\Element\Template */+
+/** @var  $block  Magento\Framework\View\Element\Template */
 
 $notificationbarViewModel = $block->getdata('notificationbar.viewmodel'); ?>
 
